--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Employee Management Application</title>    
+    <title>Employees Management Application</title>    
     
     <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan+2:400,600,700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" rel="stylesheet">
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <script src="js/inventory-management.js"></script>
+    <script src="js/employees-management.js"></script>
     <script src="https://code.iconify.design/1/1.0.4/iconify.min.js"></script>
 </body>
 
