Adding the number of employees functionality

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             </form>
         </div>
         <div class="row">
+            <span id="numberOfEmployees"></span>
             <table id="table"></table>
         </div>
     </div>
