--- a/app/employees.html
+++ b/app/employees.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Employees Management Application</title>    
+    <title>Assignment 06 - Employees Management Application</title>    
     
     <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan+2:400,600,700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css" rel="stylesheet">
