--- a/app/employees.html
+++ b/app/employees.html
@@ -18,23 +18,28 @@
                 <div class="row">
                     <div class="two columns">
                         <label for="IDInput">ID</label>
-                        <input class="u-full-width" type="number" placeholder="" required id="IDInput">
+                        <input class="u-full-width" type="number" placeholder="" id="IDInput">
                     </div>
                     <div class="five columns">
                         <label for="EmployeeNameInput">Name</label>
-                        <input class="u-full-width" type="text" placeholder="" required id="EmployeeNameInput">
+                        <input class="u-full-width" type="text" placeholder="" id="EmployeeNameInput">
                     </div>
                     <div class="two columns">
                         <label for="EmployeeTitleInput">Title</label>
-                        <input class="u-full-width" type="text" placeholder="" required id="EmployeeTitleInput">
+                        <input class="u-full-width" type="text" placeholder="" id="EmployeeTitleInput">
                     </div>
                     <div class="three columns">
                         <label for="EmployeeExtensionInput">Extension</label>
-                        <input class="u-full-width" type="number" placeholder="" required id="EmployeeExtensionInput">
+                        <input class="u-full-width" type="number" placeholder="" id="EmployeeExtensionInput">
                     </div>                    
                 </div>
-                <div class="row right">
-                    <input class="button-primary" type="submit" onclick="add();" value="Add">
+                <div class="row">
+                    <div class="five columns">
+                        <span id="error"></span>
+                    </div>
+                    <div class="seven right">
+                        <input class="button-primary right" type="button" onclick="add();" value="Add">
+                    </div>                    
                 </div>    
             </form>
         </div>
